src/objects/Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Package_Product_Platform__c</fullName>
        <label>Add On Package Product Platform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Package_Product_Sub_Type__c</fullName>
        <label>Add On Package Product Sub Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Package_Subscription_Rate__c</fullName>
        <label>Add On Package Subscription Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addon_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Addon Package</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Package__c.Package_Type__c</field>
                <operation>equals</operation>
                <value>Add On</value>
            </filterItems>
            <filterItems>
                <field>Package__c.Eligible_Product_Family_for_Add_On_Pack__c</field>
                <operation>contains</operation>
                <valueField>$Source.Main_Package_Product_Family__c</valueField>
            </filterItems>
            <filterItems>
                <field>Package__c.Billing_Type__c</field>
                <operation>contains</operation>
                <valueField>$Source.Main_Package_Billing_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Order Line Items (Addon Package ID)</relationshipLabel>
        <relationshipName>Order_Line_Items_Vendor1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Charge__c</fullName>
        <label>Admin Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_To_Refund__c</fullName>
        <label>Amount To Refund</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asia1_Creation_Mode__c</fullName>
        <description>Indicates whether the Asia1 creation is Individual or Bulk. This is use in Order Entry functionality.</description>
        <label>Asia1 Creation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asia_1_creation_mode__c</fullName>
        <label>Asia 1 creation mode</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Based_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is applicable for Change of Subscription process. This contains the Order Line Item of the Subscription being changed. This is used when getting the Classification, Sub-classification and Reason Code.</description>
        <label>Based Order Line Item</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Based_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Based_Publication_Product_Category__c</fullName>
        <label>Based Publication Product Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Urgent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Urgent Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Line Items (Direct)</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <formula>IF(AND(Order__r.Order_Type__c = &apos;Start&apos;, Vendor_Conversion__c = TRUE), &apos;Vendor Conversion&apos;, (IF(Order__r.Order_Type__c = &apos;Start&apos;, &apos;New&apos;, (IF(Order__r.Order_Type__c = &apos;Renewal&apos;, &apos;Renewed&apos;, (IF(CONTAINS(Order__r.Order_Type__c, &apos;Change of Subscription&apos;), &apos;Change&apos;, &apos;N/A&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTL_Date__c</fullName>
        <label>DTL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_By__c</fullName>
        <label>Delivered By</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Sub_Delivery_Method__c</fullName>
        <description>This is mapped to Publication Direct Delivery Method upon creation of the Order Line Item. Use in retrieving an Order Line Item for update in Start Subscription Order form to avoid query the associated Objects.</description>
        <label>Direct Sub Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor or Mailing Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Stop_Date__c</fullName>
        <label>Earliest Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Created for Change of Subscription.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Override_Amount__c</fullName>
        <description>Overridden Admin Charge amount</description>
        <label>Fee Override Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift1</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift2</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Order Line Items (Gift2)</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift3</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Order Line Items (Gift3)</relationshipLabel>
        <relationshipName>Order_Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gl_Code__c</fullName>
        <label>Gl Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Allocation__c</fullName>
        <label>Grace Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Grace Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsEOMCycle__c</fullName>
        <formula>IF( Today() &lt;= 
IF( 
MONTH( TODAY()) = 12, 
DATE( YEAR( TODAY() ), 12, 31 ), 
DATE( YEAR( TODAY() ), MONTH ( TODAY() ) + 1, 1 ) - 1 ) 
&amp;&amp; 
Today() &gt; 
IF( 
MONTH( TODAY()) = 12, 
DATE( YEAR( TODAY() ), 12, (31 - $Setup.Days_Before_EOM__c.Number_Of_Days__c) ), 
DATE( YEAR( TODAY() ), MONTH ( TODAY() ) + 1, 1 ) - ($Setup.Days_Before_EOM__c.Number_Of_Days__c +1) ),True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsEOMCycle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_All_In_One__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is All In One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the associated package is digital. This is use in Order Entry functionality.</description>
        <label>Is Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Downgrade__c</fullName>
        <description>This field will be auto-populated thru field update.</description>
        <label>Is Downgrade</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Qty_Increase__c</fullName>
        <description>This field will be auto populated thru field update.</description>
        <label>Is Qty Increase</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Package_Billing_Type__c</fullName>
        <label>Main Package Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Postpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Package_Frequency__c</fullName>
        <label>Main Package Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mon - Fri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mon - Sat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat - Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri - Sun</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Package_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Main Package ID</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Order Line Items (Main Package ID)</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Package_Period__c</fullName>
        <label>Main Package Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Package_Product_Family__c</fullName>
        <label>Main Package Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Package_Product_Platform__c</fullName>
        <label>Main Package Product Platform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Package_Product_Sub_Type__c</fullName>
        <label>Main Package Product Sub Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Package_Sub_Type__c</fullName>
        <label>Main Package Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Termed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Package_Subscription_Rate__c</fullName>
        <label>Main Package Subscription Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Main_Package_Type__c</fullName>
        <label>Main Package Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Contract_Period__c</fullName>
        <inlineHelpText>New Contract Period is required if a Promotion is being selected for creating the Order.</inlineHelpText>
        <label>New Contract Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Payment_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Change of Subscription</description>
        <label>New Payment Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Quantity__c</fullName>
        <description>Created for Change of Subscription.</description>
        <label>New Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_GIfts__c</fullName>
        <description>This is to identify if an order line item has a gift tied with it.</description>
        <label>Number of GIfts</label>
        <summaryForeignKey>Order_Line_Item_Gift__c.Order_Line_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Subscription__c</fullName>
        <label>Old Subscription</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>Online Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item_ID__c</fullName>
        <label>Order Line Item ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Order Line Item Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <displayFormat>A-{000000}</displayFormat>
        <label>Order Line Item #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items_Direct</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override_Reason__c</fullName>
        <label>Override Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Parent Account)</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Penalty_Charge__c</fullName>
        <label>Penalty Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Copies_2__c</fullName>
        <label>Pending Copies 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Copies__c</fullName>
        <description>Pending copies for refund</description>
        <label>Pending Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ph_d__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ph (d)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ph_e__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ph (e)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postage_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Postage Charge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Qty__c</fullName>
        <description>This is applicable to Change of Subscription.</description>
        <label>Previous Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Contract_Period__c</fullName>
        <label>Promotion Contract Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion ID</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Order Line Items (Vendor)</relationshipLabel>
        <relationshipName>Order_Line_Items_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_1__c</fullName>
        <label>Publication 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_2__c</fullName>
        <label>Publication 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Product_Category__c</fullName>
        <label>Publication Product Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Updated Length  from 16,2 (FDS)  to 5,0 (Sample Tool tip from Eugene)</description>
        <label>Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Postal_Code__c</fullName>
        <formula>Order__r.Recipient_Contact__r.Address__r.Postal_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Request_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_classification__c</fullName>
        <description>This field will be auto-populated thru  trigger</description>
        <label>Sub-classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribed_as__c</fullName>
        <label>Subscribed as</label>
        <picklist>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <formula>Order__r.Subscription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppress_Notification_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Notification (Stop)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Renewal_and_Reminder_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Renewal and Reminder Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Vendor_Start_notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Vendor Start notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supressed_Acknowledgement_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supressed Acknowledgement Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supressed_Grace_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supressed Grace Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supressed_Vendor_Notification_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supressed Vendor Notification(Converted)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supressed_Vendor_Notification_New_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Vendor Start Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <label>Term Length (Mth)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_is_discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term is discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminating_Reason__c</fullName>
        <label>Terminating Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Package - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Misc. Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to another pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Not reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Moving overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Service / Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Digital / apps issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - No reason given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction in quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Gift_Price__c</fullName>
        <description>System calculated based on the summation of the related Gifts Price</description>
        <label>Total Gift Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Postage_Charge__c</fullName>
        <formula>Term_Length__c *  Postage_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Postage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Subscription_Rate__c</fullName>
        <formula>(Main_Package_Subscription_Rate__c +  Add_On_Package_Subscription_Rate__c) *  Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Urgent_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KCampang 9/29/2014] Created field for Stop Subscription for Urgent Stop</description>
        <label>Urgent Stop?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <formula>Start_Date__c &lt; Earliest_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Conversion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Mailing_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor/Mailing Agent</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Mailing Agent</value>
            </filterItems>
            <infoMessage>Select Vendor or Mailing Agent Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items_Direct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Subscription_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Subscription ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>Subscription_Vendor__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Delivered_By__c</columns>
        <columns>Order__c</columns>
        <columns>Recipient_Postal_Code__c</columns>
        <columns>Vendor_Mailing_Agent__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OLI{0000000000}</displayFormat>
        <label>Order Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChangeOfSubStartDate</fullName>
        <active>true</active>
        <description>Validation for Change of Subscription Start Date: 
- Baskar 03/31 - start date for change of subscription should not earlier than tomorrow
UD-0634</description>
        <errorConditionFormula>AND
( 
ISNEW(),
CONTAINS(Order__r.Order_Type__c, &quot;Change of Subscription&quot;),
Start_Date__c &lt;= TODAY()
)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Change Of Subscription Validation: Start Date must be greater than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivered_By</fullName>
        <active>false</active>
        <description>Delivered By is require.</description>
        <errorConditionFormula>ISBLANK(TEXT(Delivered_By__c))</errorConditionFormula>
        <errorDisplayField>Delivered_By__c</errorDisplayField>
        <errorMessage>Delivered By is require.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Main_Package_Billing_Type</fullName>
        <active>true</active>
        <description>Main Package Billing Type is require.</description>
        <errorConditionFormula>ISBLANK(TEXT(Main_Package_Billing_Type__c))</errorConditionFormula>
        <errorDisplayField>Main_Package_Billing_Type__c</errorDisplayField>
        <errorMessage>Main Package Billing Type is require.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Main_Package_Frequency</fullName>
        <active>true</active>
        <description>Main Package Frequency is require.</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(Main_Package_Frequency__c)),  Order__r.Order_Type__c = &apos;Start&apos;)</errorConditionFormula>
        <errorDisplayField>Main_Package_Frequency__c</errorDisplayField>
        <errorMessage>Main Package Frequency is require.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Main_Package_Sub_Type</fullName>
        <active>false</active>
        <description>Main Package Sub Type is require.</description>
        <errorConditionFormula>ISBLANK(TEXT( Main_Package_Sub_Type__c ))</errorConditionFormula>
        <errorDisplayField>Main_Package_Sub_Type__c</errorDisplayField>
        <errorMessage>Main Package Sub Type is require.</errorMessage>
    </validationRules>
</CustomObject>